# lidar_based_map_updating

./: README.md
map-change-detection/: CMakeLists.txt  package.xml
map-change-detection/include/map_change_detection/: efficient_cell_store.hpp  grid.hpp  map_change_detection.hpp  map_processer.hpp  rolling_buffer.hpp  scan_handler.hpp  vector2.hpp
map-change-detection/launch/: monitor_consumption.launch  robotnik_update_bag.launch  start_map_update.launch
map-change-detection/msg/: ChangedCells.msg
map-change-detection/param/: parameters.yaml
map-change-detection/rviz_config/: map-updating.rviz  rviz_kokubi.rviz  video-recording.rviz
map-change-detection/src/: grid.cpp  image_publisher.cpp  map_change_detection.cpp  map_processer_node.cpp  map_updater_node.cpp  scan_handler.cpp
